[package]
name = "rust-http-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4" # 异步IO Web框架
axum-extra = { version = "0.10.1", features = ["cookie"] }  # 启用 cookie 特性
tokio = { version = "1.0", features = ["full"] } # 异步IO
tower-http = { version = "0.5.0", features = ["cors"] } # 中间件(axum不自带中间件)、跨域

tracing = "0.1" # 日志追踪
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # 日志追踪

serde = { version = "1.0", features = ["derive"] } # JSON序列化/反序列化
serde_json = "1.0.140" # json相关

uuid = { version = "1.0", features = ["serde", "v4"] } # 生成唯一id
chrono = { version = "0.4", features = ["serde"] } # 时间
once_cell = "1.21.3" # 其中一个应用是用lazy生成线程安全的单例
